--- a/index.html
+++ b/index.html
@@ -38,20 +38,23 @@
         <h2 class="section-title"><a href="#home">ABOUT US</a></h2>
         <div class="about-text">
             <div class="about-box">
+                <div class="index-social-wrapper">
+                    <ul class="index-social-links">
+                        <li><a href=""><img src="img/icons/applemusic.png"></a></li>
+                        <li><a href=""><img src="img/icons/spotify.png"></a></li>
+                        <li><a href=""><img src="img/icons/instagram.png"></a></li>
+                        <li><a href=""><img src="img/icons/tiktok.png"></a></li>
+                        <li><a href=""><img src="img/icons/youtube.png"></a></li>
+                        <li><a href=""><img src="img/icons/facebook.png"></a></li>
+                        <li><a href=""><img src="img/icons/twitter.png"></a></li>
+                        <li><a href=""><img src="img/icons/email.svg"></a></li>
+                    </ul>
+                </div>
                 <div class="about-paragraphs">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus viverra adipiscing at in tellus integer feugiat scelerisque varius. Proin nibh nisl condimentum id venenatis a. In vitae turpis massa sed elementum tempus. Quam lacus suspendisse faucibus interdum posuere lorem ipsum. Nulla pharetra diam sit amet nisl suscipit. Senectus et netus et malesuada fames ac. Aliquam purus sit amet luctus venenatis lectus magna fringilla urna. Id cursus metus aliquam eleifend mi. Purus faucibus ornare suspendisse sed. Volutpat consequat mauris nunc congue. Ac feugiat sed lectus vestibulum. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Ultrices gravida dictum fusce ut placerat. Convallis aenean et tortor at risus viverra.</p>
                     <br><p>Varius duis at consectetur lorem donec. Augue neque gravida in fermentum et sollicitudin ac. Cursus vitae congue mauris rhoncus aenean vel. Et ligula ullamcorper malesuada proin libero nunc. Dui accumsan sit amet nulla facilisi morbi tempus. Risus nullam eget felis eget nunc lobortis mattis aliquam. Lacus vel facilisis volutpat est. Neque viverra justo nec ultrices dui sapien eget mi. Aliquam sem et tortor consequat. Id diam vel quam elementum. Neque convallis a cras semper auctor neque vitae. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.</p>
                     <br><p>Bibendum enim facilisis gravida neque convallis. Porttitor leo a diam sollicitudin. Eget mauris pharetra et ultrices neque ornare. Etiam sit amet nisl purus in mollis nunc sed. Pretium viverra suspendisse potenti nullam ac tortor. Fames ac turpis egestas maecenas. Feugiat in ante metus dictum at. Et ultrices neque ornare aenean euismod elementum nisi. Egestas integer eget aliquet nibh praesent tristique magna sit. Lacus vestibulum sed arcu non odio euismod lacinia at quis. Pharetra vel turpis nunc eget lorem. Tristique risus nec feugiat in fermentum posuere. Pretium nibh ipsum consequat nisl vel. Et malesuada fames ac turpis egestas maecenas pharetra convallis posuere.</p>
-                </div>
-                <div class="about-links">
-                    <a href="">Apple Music</a>
-                    <a href="">Spotify</a>
-                    <a href="">Instagram</a>
-                    <a href="">Facebook</a>
-                    <a href="">YouTube</a>
-                    <a href="">TikTok</a>
-                    <a href="presskit.html">Press Kit</a>
-                    <a href="">Contact</a>
+                    <br><a style="padding-top: 1em; text-decoration: none;" href="presskit.html"><strong>EPK (Click Here)</strong></a>
                 </div>
             </div>
         </div>
