--- a/presskit.html
+++ b/presskit.html
@@ -40,6 +40,20 @@
                 </li>
             </div>
         </div>
+        
+        <div class="press-socials press-width">
+            <h2>Socials</h2>
+            <ul class="press-social-links">
+                <li><a href=""><img src="img/icons/applemusic.png"></a></li>
+                <li><a href=""><img src="img/icons/spotify.png"></a></li>
+                <li><a href=""><img src="img/icons/instagram.png"></a></li>
+                <li><a href=""><img src="img/icons/tiktok.png"></a></li>
+                <li><a href=""><img src="img/icons/youtube.png"></a></li>
+                <li><a href=""><img src="img/icons/facebook.png"></a></li>
+                <li><a href=""><img src="img/icons/twitter.png"></a></li>
+                <li><a href=""><img src="img/icons/email.svg"></a></li>
+            </ul>
+        </div>
 
         <div class="press-bio press-width">
             <h2>Bio</h2>
@@ -60,21 +74,28 @@
                 <a href=""><img class="photo-thumb" src="img/logo-pack.webp"></a>
             </li>
         </div>
-        
-        <div class="press-plot press-width">
-            <h2>Stage Plot</h2>
-        </div>
 
         <div class="press-music press-width">
             <h2>Music</h2>
+            <div class="music-player-wrapper">
+                <iframe style="border: 0; width: 100%;; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
+            </div>
         </div>
 
         <div class="press-videos press-width">
             <h2>Videos</h2>
+            <div class="all-press-videos">
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/pvM5OBe7rh4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/q0pIQcSqGx4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
 
-        <div class="press-socials press-width">
-            <h2>Socials</h2>
+        <div class="press-plot press-width">
+            <h2>Stage Plot</h2>
         </div>
     </div>
 
