Index formatted for mobile

--- a/index.html
+++ b/index.html
@@ -15,17 +15,33 @@
         <div id="header-wrapper" class="img-wrapper">
             <img class="header-logo"  src="img/logo-white.svg">
         </div>
-        <div class="nav-links">
+        <div class="header-links">
             <a class="nav-link" href="">SHOWS</a>
             <a class="nav-link" href="#about">ABOUT</a>
         </div>
     </div>
+
+    <div class="mobile-links">
+        <a class="mobile-link" href="#music">MUSIC</a>
+        <a class="mobile-link" href="">MERCH</a>
+        <a class="mobile-link" href="">SHOWS</a>
+        <a class="mobile-link" href="#about">ABOUT</a>
+    </div>
+
     <div class="hero">
 
     </div>
 
+    <div class="mobile-photo">
+        <img src="img/hero-photo.webp">
+    </div>
+
     <div id="music" class="music-section">
         <h2 class="section-title"><a href="#home">MUSIC</a></h2>
+        <div class="music-icons">
+            <a href=""><img src="img/icons/applemusic.png"></a>
+            <a href=""><img src="img/icons/spotify.png"></a>
+        </div>
         <div class="music-video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/pvM5OBe7rh4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
