--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/pvM5OBe7rh4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="music-player">
-            <iframe style="border: 0; width: 400px; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
+            <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
         </div>
     </div>
 
