--- a/presskit.html
+++ b/presskit.html
@@ -9,16 +9,23 @@
   <body id="body-press">
     <div id="home" class="title-bar">
         <div class="header-links">
-            <a class="nav-link" href="index.html#music">MUSIC</a>
+            <a class="nav-link" href="#music">MUSIC</a>
             <a class="nav-link" href="">MERCH</a>
         </div>"
         <div id="header-wrapper" class="img-wrapper">
             <img class="header-logo"  src="img/logo-white.svg">
         </div>
-        <div class="nav-links">
+        <div class="header-links">
             <a class="nav-link" href="">SHOWS</a>
-            <a class="nav-link" href="index.html#about">ABOUT</a>
+            <a class="nav-link" href="#about">ABOUT</a>
         </div>
+    </div>
+
+    <div class="mobile-links">
+        <a class="mobile-link" href="#music">MUSIC</a>
+        <a class="mobile-link" href="">MERCH</a>
+        <a class="mobile-link" href="">SHOWS</a>
+        <a class="mobile-link" href="#about">ABOUT</a>
     </div>
 
     <div class="press-section">
@@ -77,8 +84,12 @@
 
         <div class="press-music press-width">
             <h2>Music</h2>
-            <div class="music-player-wrapper">
-                <iframe style="border: 0; width: 100%;; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
+            <div class="press-music-icons">
+                <a href=""><img src="img/icons/applemusic.png"></a>
+                <a href=""><img src="img/icons/spotify.png"></a>
+            </div>
+            <div id="press-music-player" class="music-player-wrapper">
+                <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
             </div>
         </div>
 
