Added bio + press snippets

--- a/presskit.html
+++ b/presskit.html
@@ -34,16 +34,16 @@
             <img class="press-header-photo" src="img/hero-photo.webp">
             <div class="press-header-quotes">
                 <li class="quote">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
-                    <p><strong>-Associated Press</strong></p>
+                    <p>"I see potential here for this band to be the next big thing, a truly inspiring group of musicians with hearts on their sleeves and a mission to rock."</p>
+                    <p><strong>-Indie Vision Music</strong></p>
                 </li>
                 <li class="quote">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
-                    <p><strong>-Alternative Press</strong></p>
+                    <p>Album & Song of the Year Nominee</p>
+                    <p><strong>Veer Magazine Awards, 2021</strong></p>
                 </li>
                 <li class="quote">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
-                    <p><strong>-The Hard Times</strong></p>
+                    <p>"Red Weather . . . is an exceptional combination of catchy guitar hooks, emotional vulnerability and lyrics full of venom.”</p>
+                    <p><strong>-Alex Cain, The Marlin Chronicle</strong></p>
                 </li>
             </div>
         </div>
@@ -64,9 +64,9 @@
 
         <div class="press-bio press-width">
             <h2>Bio</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus viverra adipiscing at in tellus integer feugiat scelerisque varius. Proin nibh nisl condimentum id venenatis a. In vitae turpis massa sed elementum tempus. Quam lacus suspendisse faucibus interdum posuere lorem ipsum. Nulla pharetra diam sit amet nisl suscipit. Senectus et netus et malesuada fames ac. Aliquam purus sit amet luctus venenatis lectus magna fringilla urna. Id cursus metus aliquam eleifend mi. Purus faucibus ornare suspendisse sed. Volutpat consequat mauris nunc congue. Ac feugiat sed lectus vestibulum. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Ultrices gravida dictum fusce ut placerat. Convallis aenean et tortor at risus viverra.</p>
-            <p>Varius duis at consectetur lorem donec. Augue neque gravida in fermentum et sollicitudin ac. Cursus vitae congue mauris rhoncus aenean vel. Et ligula ullamcorper malesuada proin libero nunc. Dui accumsan sit amet nulla facilisi morbi tempus. Risus nullam eget felis eget nunc lobortis mattis aliquam. Lacus vel facilisis volutpat est. Neque viverra justo nec ultrices dui sapien eget mi. Aliquam sem et tortor consequat. Id diam vel quam elementum. Neque convallis a cras semper auctor neque vitae. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.</p>
-            <p>Bibendum enim facilisis gravida neque convallis. Porttitor leo a diam sollicitudin. Eget mauris pharetra et ultrices neque ornare. Etiam sit amet nisl purus in mollis nunc sed. Pretium viverra suspendisse potenti nullam ac tortor. Fames ac turpis egestas maecenas. Feugiat in ante metus dictum at. Et ultrices neque ornare aenean euismod elementum nisi. Egestas integer eget aliquet nibh praesent tristique magna sit. Lacus vestibulum sed arcu non odio euismod lacinia at quis. Pharetra vel turpis nunc eget lorem. Tristique risus nec feugiat in fermentum posuere. Pretium nibh ipsum consequat nisl vel. Et malesuada fames ac turpis egestas maecenas pharetra convallis posuere.</p>
+            <p>Red Weather formed in 2018 when Tim Ilardi (vocals/bass) and Mike McFarland (vocals/guitar) found drummer Brian Bassette via a Craigslist ad after their previous band, From Rooftops, split up. Between the 3 of them, they have decades in the punk and emo scenes, having played in bands such as Driving East, The Courage Badge, We Brothers Are Equal, and many others. Their love for the pop punk and emo sound of the early 2000s drove them to write music reminiscent of the era, citing influences such as Taking Back Sunday, The Get Up Kids, Coheed & Cambria, Saosin, and mewithoutYou. </p>
+            <p>After honing their craft over the years, Red Weather independently released their debut EP, Empty Places in 2020. With the EP under their belt, they immediately went back to work on their debut full length – Wish You Well. They also asked their friend, Chris Cornell (no, not THAT Chris Cornell) to join the band as a second guitar player and a third singer to round out their live sound. </p>
+            <p>Wish You Well continues the progression Red Weather set out on and expands upon it, offering hook-laden songs that range from pop punk (“Nothing At All” and “Save My Breath”) to emo anthems (“Bend” and “Counting Seconds”). Their goal was to provide variety in sound between the songs instead of writing the same song ten times, while retaining the hooks, energy, and dual vocals they’ve come to be known for. The album releases this year, with the confidence that there is something for everyone to be found.</p>
         </div>
 
         <div class="press-photos press-width">
