--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <div id="music" class="music-section">
         <h2 class="section-title"><a href="#home">MUSIC</a></h2>
         <div class="music-icons">
-            <a href=""><img src="img/icons/applemusic.png"></a>
             <a href=""><img src="img/icons/spotify.png"></a>
+            <a href=""><img src="img/icons/applemusic.png"></a>
         </div>
         <div class="music-video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/pvM5OBe7rh4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -54,10 +54,13 @@
         <h2 class="section-title"><a href="#home">ABOUT US</a></h2>
         <div class="about-text">
             <div class="about-box">
+                <div class="mobile-about-photo">
+                    <img src="img/wall-purple-bg.webp">
+                </div>
                 <div class="index-social-wrapper">
                     <ul class="index-social-links">
-                        <li><a href=""><img src="img/icons/applemusic.png"></a></li>
                         <li><a href=""><img src="img/icons/spotify.png"></a></li>
+                        <li><a href=""><img src="img/icons/applemusic.png"></a></li>
                         <li><a href=""><img src="img/icons/instagram.png"></a></li>
                         <li><a href=""><img src="img/icons/tiktok.png"></a></li>
                         <li><a href=""><img src="img/icons/youtube.png"></a></li>
