--- a/presskit.html
+++ b/presskit.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Red Weather | Band</title>
+    <title>Red Weather | Band | Press Kit</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body id="body-press">
@@ -39,7 +39,7 @@
                 </li>
                 <li class="quote">
                     <p>Album & Song of the Year Nominee</p>
-                    <p><strong>Veer Magazine Awards, 2021</strong></p>
+                    <p><strong>2022 Veer Music Awards</strong></p>
                 </li>
                 <li class="quote">
                     <p>"Red Weather . . . is an exceptional combination of catchy guitar hooks, emotional vulnerability and lyrics full of venom.”</p>
