More mobile updates

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="nav-link" href="">MERCH</a>
         </div>"
         <div id="header-wrapper" class="img-wrapper">
-            <img class="header-logo"  src="img/logo-white.svg">
+            <a href="#home"><img class="header-logo"  src="img/logo-white.svg"></a>
         </div>
         <div class="header-links">
             <a class="nav-link" href="">SHOWS</a>
