Added external links for social media

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="home" class="title-bar">
         <div class="header-links">
             <a class="nav-link" href="#music">MUSIC</a>
-            <a class="nav-link" href="">MERCH</a>
+            <a class="nav-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
         </div>"
         <div id="header-wrapper" class="img-wrapper">
             <a href="#home"><img class="header-logo"  src="img/logo-white.svg"></a>
@@ -23,7 +23,7 @@
 
     <div class="mobile-links">
         <a class="mobile-link" href="#music">MUSIC</a>
-        <a class="mobile-link" href="">MERCH</a>
+        <a class="mobile-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
         <a class="mobile-link" href="">SHOWS</a>
         <a class="mobile-link" href="#about">ABOUT</a>
     </div>
@@ -39,8 +39,8 @@
     <div id="music" class="music-section">
         <h2 class="section-title"><a href="#home">MUSIC</a></h2>
         <div class="music-icons">
-            <a href=""><img src="img/icons/spotify.png"></a>
-            <a href=""><img src="img/icons/applemusic.png"></a>
+            <a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png"></a>
+            <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a>
         </div>
         <div class="music-video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/pvM5OBe7rh4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -59,14 +59,14 @@
                 </div>
                 <div class="index-social-wrapper">
                     <ul class="index-social-links">
-                        <li><a href=""><img src="img/icons/spotify.png"></a></li>
-                        <li><a href=""><img src="img/icons/applemusic.png"></a></li>
-                        <li><a href=""><img src="img/icons/instagram.png"></a></li>
-                        <li><a href=""><img src="img/icons/tiktok.png"></a></li>
-                        <li><a href=""><img src="img/icons/youtube.png"></a></li>
-                        <li><a href=""><img src="img/icons/facebook.png"></a></li>
-                        <li><a href=""><img src="img/icons/twitter.png"></a></li>
-                        <li><a href=""><img src="img/icons/email.svg"></a></li>
+                        <li><a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ"><img src="img/icons/spotify.png"></a></li>
+                        <li><a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a></li>
+                        <li><a href="https://instagram.com/rdwthr" target="_blank"><img src="img/icons/instagram.png"></a></li>
+                        <li><a href="https://www.tiktok.com/@rdwthr?_t=8YWqXv3SJ1q&_r=1" target="_blank"><img src="img/icons/tiktok.png"></a></li>
+                        <li><a href="https://www.youtube.com/@redweather" target="_blank"><img src="img/icons/youtube.png"></a></li>
+                        <li><a href="https://www.facebook.com/rdwthr" target="_blank"><img src="img/icons/facebook.png"></a></li>
+                        <li><a href="https://twitter.com/rdwthr?s=21&t=yCKW4P7k5O_KH-HWxrmm3w" target="_blank"><img src="img/icons/twitter.png"></a></li>
+                        <li><a href="mailto:tim@rdwthr.com" target="_blank"><img src="img/icons/email.svg"></a></li>
                     </ul>
                 </div>
                 <div class="about-paragraphs">
