--- a/presskit.html
+++ b/presskit.html
@@ -9,23 +9,23 @@
   <body id="body-press">
     <div id="home" class="title-bar">
         <div class="header-links">
-            <a class="nav-link" href="#music">MUSIC</a>
-            <a class="nav-link" href="">MERCH</a>
+            <a class="nav-link" href="index.html#music">MUSIC</a>
+            <a class="nav-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
         </div>"
         <div id="header-wrapper" class="img-wrapper">
             <a href="index.html"><img class="header-logo"  src="img/logo-white.svg"></a>
         </div>
         <div class="header-links">
             <a class="nav-link" href="">SHOWS</a>
-            <a class="nav-link" href="#about">ABOUT</a>
+            <a class="nav-link" href="index.html#about">ABOUT</a>
         </div>
     </div>
 
     <div class="mobile-links">
-        <a class="mobile-link" href="#music">MUSIC</a>
-        <a class="mobile-link" href="">MERCH</a>
+        <a class="mobile-link" href="index.html#music">MUSIC</a>
+        <a class="mobile-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
         <a class="mobile-link" href="">SHOWS</a>
-        <a class="mobile-link" href="#about">ABOUT</a>
+        <a class="mobile-link" href="index.html#about">ABOUT</a>
     </div>
 
     <div class="press-section">
@@ -51,14 +51,14 @@
         <div class="press-socials press-width">
             <h2>Socials</h2>
             <ul class="press-social-links">
-                <li><a href=""><img src="img/icons/applemusic.png"></a></li>
-                <li><a href=""><img src="img/icons/spotify.png"></a></li>
-                <li><a href=""><img src="img/icons/instagram.png"></a></li>
-                <li><a href=""><img src="img/icons/tiktok.png"></a></li>
-                <li><a href=""><img src="img/icons/youtube.png"></a></li>
-                <li><a href=""><img src="img/icons/facebook.png"></a></li>
-                <li><a href=""><img src="img/icons/twitter.png"></a></li>
-                <li><a href=""><img src="img/icons/email.svg"></a></li>
+                <li><a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png"></a></li>
+                <li><a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a></li>
+                <li><a href="https://instagram.com/rdwthr" target="_blank"><img src="img/icons/instagram.png"></a></li>
+                <li><a href="https://www.tiktok.com/@rdwthr?_t=8YWqXv3SJ1q&_r=1" target="_blank"><img src="img/icons/tiktok.png"></a></li>
+                <li><a href="https://www.youtube.com/@redweather" target="_blank"><img src="img/icons/youtube.png"></a></li>
+                <li><a href="https://www.facebook.com/rdwthr" target="_blank"><img src="img/icons/facebook.png"></a></li>
+                <li><a href="https://twitter.com/rdwthr?s=21&t=yCKW4P7k5O_KH-HWxrmm3w" target="_blank"><img src="img/icons/twitter.png"></a></li>
+                <li><a href="mailto:tim@rdwthr.com" target="_blank"><img src="img/icons/email.svg"></a></li>
             </ul>
         </div>
 
@@ -75,18 +75,18 @@
             <p>(Click for full resolution / more)</p>
             </div>
             <li class="press-photo-list">
-                <a href=""><img class="photo-thumb" src="img/hero-photo.webp"></a>
-                <a href=""><img class="photo-thumb" src="img/wall-purple-bg.webp"></a>
-                <a href=""><img class="photo-thumb" src="img/wall-white-bg.webp"></a>
-                <a href=""><img class="photo-thumb" src="img/logo-pack.webp"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/hero-photo.webp"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-purple-bg.webp"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-white-bg.webp"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/logo-pack.webp"></a>
             </li>
         </div>
 
         <div class="press-music press-width">
             <h2>Music</h2>
             <div class="press-music-icons">
-                <a href=""><img src="img/icons/applemusic.png"></a>
-                <a href=""><img src="img/icons/spotify.png"></a>
+                <a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png"></a>
+                <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a>
             </div>
             <div id="press-music-player" class="music-player-wrapper">
                 <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
