Favicon, titles, merch link updated

--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Red Weather | Band</title>
+    <title>RED WEATHER | Official Site</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <div id="home" class="title-bar">
         <div class="header-links">
             <a class="nav-link" href="#music">MUSIC</a>
-            <a class="nav-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
+            <a class="nav-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         </div>"
         <div id="header-wrapper" class="img-wrapper">
             <a href="#home"><img class="header-logo"  src="img/logo-white.svg"></a>
