--- a/presskit.html
+++ b/presskit.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Red Weather | Band | Press Kit</title>
+    <title>RED WEATHER | Official Site | Press Kit</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body id="body-press">
     <div id="home" class="title-bar">
@@ -23,7 +27,7 @@
 
     <div class="mobile-links">
         <a class="mobile-link" href="index.html#music">MUSIC</a>
-        <a class="mobile-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
+        <a class="mobile-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         <a class="mobile-link" href="">SHOWS</a>
         <a class="mobile-link" href="index.html#about">ABOUT</a>
     </div>
