Meta tags added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <meta property="og:title" content="Red Weather | Official Site">
+    <meta property="og:site_name" content="Red Weather | Official Site">
+    <meta property="og:image" content="https://rdwthr.com/img/hero-photo.webp" />
+    <meta name="description" content="Music, videos, shows, merch, and more from the Virginia Beach based Emo & Pop-Punk band Red Weather.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rdwthr.com/">
   </head>
   <body>
     <div id="home" class="title-bar">
