--- a/presskit.html
+++ b/presskit.html
@@ -9,7 +9,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <meta property="og:title" content="Red Weather | Official Site | Press Kit">
+    <meta property="og:site_name" content="Red Weather | Official Site | Press Kit">
+    <meta property="og:image" content="https://rdwthr.com/img/hero-photo.webp" />
+    <meta name="description" content="Press resources and contact info for the Virginia Beach based Emo & Pop-Punk band Red Weather.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rdwthr.com/presskit">
   </head>
+  
   <body id="body-press">
     <div id="home" class="title-bar">
         <div class="header-links">
