Updated self-link URLs to truncate .html

--- a/presskit.html
+++ b/presskit.html
@@ -20,23 +20,23 @@
   <body id="body-press">
     <div id="home" class="title-bar">
         <div class="header-links">
-            <a class="nav-link" href="index.html#music">MUSIC</a>
+            <a class="nav-link" href="/#music">MUSIC</a>
             <a class="nav-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
         </div>"
         <div id="header-wrapper" class="img-wrapper">
-            <a href="index.html"><img class="header-logo"  src="img/logo-white.svg"></a>
+            <a href="/"><img class="header-logo"  src="img/logo-white.svg"></a>
         </div>
         <div class="header-links">
             <a class="nav-link" href="">SHOWS</a>
-            <a class="nav-link" href="index.html#about">ABOUT</a>
+            <a class="nav-link" href="/#about">ABOUT</a>
         </div>
     </div>
 
     <div class="mobile-links">
-        <a class="mobile-link" href="index.html#music">MUSIC</a>
+        <a class="mobile-link" href="/#music">MUSIC</a>
         <a class="mobile-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         <a class="mobile-link" href="">SHOWS</a>
-        <a class="mobile-link" href="index.html#about">ABOUT</a>
+        <a class="mobile-link" href="/#about">ABOUT</a>
     </div>
 
     <div class="press-section">
