Fixing broken links to Shows page.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#home"><img class="header-logo"  src="img/logo-white.svg"></a>
         </div>
         <div class="header-links">
-            <a class="nav-link" href="">SHOWS</a>
+            <a class="nav-link" href="https://rdwthr.com/shows">SHOWS</a>
             <a class="nav-link" href="#about">ABOUT</a>
         </div>
     </div>
