--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://rdwthr.com/">
   </head>
+
   <body>
     <div id="home" class="title-bar">
         <div class="header-links">
@@ -34,8 +35,8 @@
 
     <div class="mobile-links">
         <a class="mobile-link" href="#music">MUSIC</a>
-        <a class="mobile-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
-        <a class="mobile-link" href="">SHOWS</a>
+        <a class="mobile-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
+        <a class="mobile-link" href="https://rdwthr.com/shows">SHOWS</a>
         <a class="mobile-link" href="#about">ABOUT</a>
     </div>
 
