--- a/shows.html
+++ b/shows.html
@@ -28,16 +28,16 @@
             <a href="/#home"><img class="header-logo"  src="img/logo-white.svg"></a>
         </div>
         <div class="header-links">
-            <a class="nav-link" href="https://rdwthr.com/shows">SHOWS</a>
+            <a class="nav-link" href="#">SHOWS</a>
             <a class="nav-link" href="/#about">ABOUT</a>
         </div>
     </div>
 
     <div class="mobile-links">
-        <a class="mobile-link" href="#music">MUSIC</a>
-        <a class="mobile-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
-        <a class="mobile-link" href="">SHOWS</a>
-        <a class="mobile-link" href="#about">ABOUT</a>
+        <a class="mobile-link" href="/#music">MUSIC</a>
+        <a class="mobile-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
+        <a class="mobile-link" href="#">SHOWS</a>
+        <a class="mobile-link" href="/#about">ABOUT</a>
     </div>
 
     <div class="shows-wrapper">
