--- a/presskit.html
+++ b/presskit.html
@@ -21,7 +21,7 @@
     <div id="home" class="title-bar">
         <div class="header-links">
             <a class="nav-link" href="/#music">MUSIC</a>
-            <a class="nav-link" href="https://redweather.bigcartel.com" target="_blank">MERCH</a>
+            <a class="nav-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         </div>"
         <div id="header-wrapper" class="img-wrapper">
             <a href="/"><img class="header-logo"  src="img/logo-white.svg"></a>
@@ -35,7 +35,7 @@
     <div class="mobile-links">
         <a class="mobile-link" href="/#music">MUSIC</a>
         <a class="mobile-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
-        <a class="mobile-link" href="">SHOWS</a>
+        <a class="mobile-link" href="https://rdwthr.com/shows">SHOWS</a>
         <a class="mobile-link" href="/#about">ABOUT</a>
     </div>
 
