--- a/presskit.html
+++ b/presskit.html
@@ -43,6 +43,9 @@
         <div class="press-header press-width">
             <h2>Press Kit</h2>
             <img class="press-header-photo" src="img/hero-photo.webp">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/Ixbh83VzbUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <div class="press-header-quotes">
                 <li class="quote">
                     <p>"I see potential here for this band to be the next big thing, a truly inspiring group of musicians with hearts on their sleeves and a mission to rock."</p>
@@ -58,7 +61,7 @@
                 </li>
             </div>
         </div>
-        
+
         <div class="press-socials press-width">
             <h2>Socials</h2>
             <ul class="press-social-links">
