Added more shows, changed bio, changed fonts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="https://use.typekit.net/jwl6hhc.css">
     <meta property="og:title" content="Red Weather | Official Site">
     <meta property="og:site_name" content="Red Weather | Official Site">
     <meta property="og:image" content="https://rdwthr.com/img/hero-photo.webp" />
@@ -21,23 +22,23 @@
   <body>
     <div id="home" class="title-bar">
         <div class="header-links">
-            <a class="nav-link" href="#music">MUSIC</a>
-            <a class="nav-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
-        </div>"
+            <a class="nav-link font-bodega-black" href="/#music">MUSIC</a>
+            <a class="nav-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
+        </div>
         <div id="header-wrapper" class="img-wrapper">
-            <a href="#home"><img class="header-logo"  src="img/logo-white.svg"></a>
+            <a href="/"><img class="header-logo"  src="img/logo-white.svg"></a>
         </div>
         <div class="header-links">
-            <a class="nav-link" href="https://rdwthr.com/shows">SHOWS</a>
-            <a class="nav-link" href="#about">ABOUT</a>
+            <a class="nav-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
+            <a class="nav-link font-bodega-black" href="/#about">ABOUT</a>
         </div>
     </div>
 
     <div class="mobile-links">
-        <a class="mobile-link" href="#music">MUSIC</a>
-        <a class="mobile-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
-        <a class="mobile-link" href="https://rdwthr.com/shows">SHOWS</a>
-        <a class="mobile-link" href="#about">ABOUT</a>
+        <a class="mobile-link font-bodega-black" href="/#music">MUSIC</a>
+        <a class="mobile-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
+        <a class="mobile-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
+        <a class="mobile-link font-bodega-black" href="/#about">ABOUT</a>
     </div>
 
     <div class="hero">
@@ -49,7 +50,7 @@
     </div>
 
     <div id="music" class="music-section">
-        <h2 class="section-title"><a href="#home">MUSIC</a></h2>
+        <h2 class="section-title"><a class="font-bodega-black" href="#home">MUSIC</a></h2>
         <div class="music-icons">
             <a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png"></a>
             <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a>
@@ -63,7 +64,7 @@
     </div>
 
     <div id="about" class="about-section">
-        <h2 class="section-title"><a href="#home">ABOUT US</a></h2>
+        <h2 class="section-title"><a class="font-bodega-black" href="#home">ABOUT US</a></h2>
         <div class="about-text">
             <div class="about-box">
                 <div class="mobile-about-photo">
@@ -82,10 +83,16 @@
                     </ul>
                 </div>
                 <div class="about-paragraphs">
-                    <a style="padding-top: 1em; text-decoration: none;" href="https://rdwthr.com/presskit"><strong>EPK (Click Here)<br></strong></a>
-                    <br><p>Red Weather formed in 2018 when Tim Ilardi (vocals/bass) and Mike McFarland (vocals/guitar) found drummer Brian Bassette via a Craigslist ad after their previous band, From Rooftops, split up. Between the 3 of them, they have decades in the punk and emo scenes, having played in bands such as Driving East, The Courage Badge, We Brothers Are Equal, and many others. Their love for the pop punk and emo sound of the early 2000s drove them to write music reminiscent of the era, citing influences such as Taking Back Sunday, The Get Up Kids, Coheed & Cambria, Saosin, and mewithoutYou. </p>
-                    <br><p>After honing their craft over the years, Red Weather independently released their debut EP, Empty Places in 2020. With the EP under their belt, they immediately went back to work on their debut full length – Wish You Well. They also asked their friend, Chris Cornell (no, not THAT Chris Cornell) to join the band as a second guitar player and a third singer to round out their live sound. </p>
-                    <br><p>Wish You Well continues the progression Red Weather set out on and expands upon it, offering hook-laden songs that range from pop punk (“Nothing At All” and “Save My Breath”) to emo anthems (“Bend” and “Counting Seconds”). Their goal was to provide variety in sound between the songs instead of writing the same song ten times, while retaining the hooks, energy, and dual vocals they’ve come to be known for. The album releases this year, with the confidence that there is something for everyone to be found.</p>
+                    <a style="padding-top: 1em; text-decoration: none;" href="https://rdwthr.com/presskit"><strong class="font-gimlet-reg">EPK (Click Here)<br></strong></a>
+                    <br><p class="font-gimlet-reg">Red Weather formed in 2018, with their members boasting a combined decades of experience in the punk and emo scenes, having played in bands such as Driving East, The Courage Badge, From Rooftops and many others. Their love for the emo and pop punk sounds of the early 2000s drove them to write music reminiscent of the era, citing influences such as Taking Back Sunday, The Get Up Kids, Coheed & Cambria, Thursday and Saosin.</p>
+                    <br><p class="font-gimlet-reg">After honing their craft over the years, Red Weather independently released their debut EP, Empty Places in 2020. With the EP under their belt, they immediately went back to work on their debut full length – Wish You Well — which released in Fall of 2021 under Revival Recordings distribution.</p>
+                    <br><p class="font-gimlet-reg">Look for new music in 2023!</p>
+                    <br><p id="band-members" class="font-gimlet-cond"><strong class="font-gimlet-cond-bold">Red Weather is:</strong>
+                        <br>Tim Ilardi - Vocals/Bass
+                        <br>Brian Bassette - Drums
+                        <br>Chris Cornell - Guitar/Vocals
+                        <br>Ethan McQuade - Guitar
+                    </p>
                 </div>
             </div>
         </div>
