--- a/shows.html
+++ b/shows.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="https://use.typekit.net/jwl6hhc.css">
     <meta property="og:title" content="Red Weather | Official Site">
     <meta property="og:site_name" content="Red Weather | Official Site">
     <meta property="og:image" content="https://rdwthr.com/img/hero-photo.webp" />
@@ -21,31 +22,31 @@
   <body id="shows-body">
     <div id="home" class="title-bar">
         <div class="header-links">
-            <a class="nav-link" href="/#music">MUSIC</a>
-            <a class="nav-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
-        </div>"
+            <a class="nav-link font-bodega-black" href="/#music">MUSIC</a>
+            <a class="nav-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
+        </div>
         <div id="header-wrapper" class="img-wrapper">
-            <a href="/#home"><img class="header-logo"  src="img/logo-white.svg"></a>
+            <a href="/"><img class="header-logo"  src="img/logo-white.svg"></a>
         </div>
         <div class="header-links">
-            <a class="nav-link" href="#">SHOWS</a>
-            <a class="nav-link" href="/#about">ABOUT</a>
+            <a class="nav-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
+            <a class="nav-link font-bodega-black" href="/#about">ABOUT</a>
         </div>
     </div>
 
     <div class="mobile-links">
-        <a class="mobile-link" href="/#music">MUSIC</a>
-        <a class="mobile-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
-        <a class="mobile-link" href="#">SHOWS</a>
-        <a class="mobile-link" href="/#about">ABOUT</a>
+        <a class="mobile-link font-bodega-black" href="/#music">MUSIC</a>
+        <a class="mobile-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
+        <a class="mobile-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
+        <a class="mobile-link font-bodega-black" href="/#about">ABOUT</a>
     </div>
 
     <div class="shows-wrapper">
-        <h1 class="shows-title">Upcoming Shows</h1>
+        <h1 class="shows-title font-bodega-black">Upcoming Shows</h1>
 
         <!-- UNCOMMENT IF NO UPCOMING SHOWS -->
         <div class="show press-width">
-            <h2><i>More shows coming soon!</i></h2>
+            <h2 class="font-bodega-light">More shows coming soon!</h2>
         </div>
         
         <!-- TEMPLATE -->
@@ -64,19 +65,46 @@
     </div>
 
     <div id="past-shows" class="shows-wrapper">
-        <h2 class="shows-title">Past Shows</h2>
+        <h2 class="shows-title font-bodega-black">Past Shows</h2>
         <div class="past-shows-internal-wrapper">
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/show2.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/22-06-25.jpg">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/show1.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/22-06-24.jpg">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/show3.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/22-05-14.jpg">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/show4.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/22-04-13.jpg">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/22-03-05.jpg">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/21-11-03.jpg">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/21-08-21.jpg">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/20-02-21.jpg">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/20-01-17.jpg">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/19-08-04.jpg">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/19-04-14.jpg">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/19-03-21.jpg">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/18-12-01.jpg">
             </div>
         </div>
     </div>
