--- a/presskit.html
+++ b/presskit.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="https://use.typekit.net/jwl6hhc.css">
     <meta property="og:title" content="Red Weather | Official Site | Press Kit">
     <meta property="og:site_name" content="Red Weather | Official Site | Press Kit">
     <meta property="og:image" content="https://rdwthr.com/img/hero-photo.webp" />
@@ -20,50 +21,50 @@
   <body id="body-press">
     <div id="home" class="title-bar">
         <div class="header-links">
-            <a class="nav-link" href="/#music">MUSIC</a>
-            <a class="nav-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
-        </div>"
+            <a class="nav-link font-bodega-black" href="/#music">MUSIC</a>
+            <a class="nav-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
+        </div>
         <div id="header-wrapper" class="img-wrapper">
             <a href="/"><img class="header-logo"  src="img/logo-white.svg"></a>
         </div>
         <div class="header-links">
-            <a class="nav-link" href="https://rdwthr.com/shows">SHOWS</a>
-            <a class="nav-link" href="/#about">ABOUT</a>
+            <a class="nav-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
+            <a class="nav-link font-bodega-black" href="/#about">ABOUT</a>
         </div>
     </div>
 
     <div class="mobile-links">
-        <a class="mobile-link" href="/#music">MUSIC</a>
-        <a class="mobile-link" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
-        <a class="mobile-link" href="https://rdwthr.com/shows">SHOWS</a>
-        <a class="mobile-link" href="/#about">ABOUT</a>
+        <a class="mobile-link font-bodega-black" href="/#music">MUSIC</a>
+        <a class="mobile-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
+        <a class="mobile-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
+        <a class="mobile-link font-bodega-black" href="/#about">ABOUT</a>
     </div>
 
     <div class="press-section">
         <div class="press-header press-width">
-            <h2>Press Kit</h2>
+            <h2 class="font-bodega-black">Press Kit</h2>
             <img class="press-header-photo" src="img/hero-photo.webp">
             <div class="video-container">
                 <iframe src="https://www.youtube.com/embed/Ixbh83VzbUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="press-header-quotes">
                 <li class="quote">
-                    <p>"I see potential here for this band to be the next big thing, a truly inspiring group of musicians with hearts on their sleeves and a mission to rock."</p>
-                    <p><strong>-Indie Vision Music</strong></p>
+                    <p class="font-gimlet-cond-bold">"I see potential here for this band to be the next big thing, a truly inspiring group of musicians with hearts on their sleeves and a mission to rock."</p>
+                    <p><strong class="font-bodega-light">-Indie Vision Music</strong></p>
                 </li>
                 <li class="quote">
-                    <p>Album & Song of the Year Nominee</p>
-                    <p><strong>2022 Veer Music Awards</strong></p>
+                    <p class="font-gimlet-cond-bold">Album & Song of the Year Nominee</p>
+                    <p><strong class="font-bodega-light">-2022 Veer Music Awards</strong></p>
                 </li>
                 <li class="quote">
-                    <p>"Red Weather . . . is an exceptional combination of catchy guitar hooks, emotional vulnerability and lyrics full of venom.”</p>
-                    <p><strong>-Alex Cain, The Marlin Chronicle</strong></p>
+                    <p class="font-gimlet-cond-bold">"Red Weather . . . is an exceptional combination of catchy guitar hooks, emotional vulnerability and lyrics full of venom.”</p>
+                    <p><strong class="font-bodega-light">-Alex Cain, The Marlin Chronicle</strong></p>
                 </li>
             </div>
         </div>
 
         <div class="press-socials press-width">
-            <h2>Socials</h2>
+            <h2 class="font-bodega-black">Socials</h2>
             <ul class="press-social-links">
                 <li><a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png"></a></li>
                 <li><a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a></li>
@@ -77,16 +78,23 @@
         </div>
 
         <div class="press-bio press-width">
-            <h2>Bio</h2>
-            <p>Red Weather formed in 2018 when Tim Ilardi (vocals/bass) and Mike McFarland (vocals/guitar) found drummer Brian Bassette via a Craigslist ad after their previous band, From Rooftops, split up. Between the 3 of them, they have decades in the punk and emo scenes, having played in bands such as Driving East, The Courage Badge, We Brothers Are Equal, and many others. Their love for the pop punk and emo sound of the early 2000s drove them to write music reminiscent of the era, citing influences such as Taking Back Sunday, The Get Up Kids, Coheed & Cambria, Saosin, and mewithoutYou. </p>
-            <p>After honing their craft over the years, Red Weather independently released their debut EP, Empty Places in 2020. With the EP under their belt, they immediately went back to work on their debut full length – Wish You Well. They also asked their friend, Chris Cornell (no, not THAT Chris Cornell) to join the band as a second guitar player and a third singer to round out their live sound. </p>
-            <p>Wish You Well continues the progression Red Weather set out on and expands upon it, offering hook-laden songs that range from pop punk (“Nothing At All” and “Save My Breath”) to emo anthems (“Bend” and “Counting Seconds”). Their goal was to provide variety in sound between the songs instead of writing the same song ten times, while retaining the hooks, energy, and dual vocals they’ve come to be known for. The album releases this year, with the confidence that there is something for everyone to be found.</p>
+            <h2 class="font-bodega-black">Bio</h2>
+            <p class="font-gimlet-reg">Red Weather formed in 2018, with their members boasting a combined decades of experience in the punk and emo scenes, having played in bands such as Driving East, The Courage Badge, From Rooftops and many others. Their love for the emo and pop punk sounds of the early 2000s drove them to write music reminiscent of the era, citing influences such as Taking Back Sunday, The Get Up Kids, Coheed & Cambria, Thursday and Saosin.</p>
+            <p class="font-gimlet-reg">After honing their craft over the years, Red Weather independently released their debut EP, Empty Places in 2020. With the EP under their belt, they immediately went back to work on their debut full length – Wish You Well — which released in Fall of 2021 under Revival Recordings distribution.</p>
+            <p class="font-gimlet-reg">Look for new music in 2023!</p>
+            <p class="font-gimlet-reg"><strong class="font-gimlet-cond-bold">Red Weather is:</strong>
+                <br>Tim Ilardi - Vocals/Bass
+                <br>Brian Bassette - Drums
+                <br>Chris Cornell - Guitar/Vocals
+                <br>Ethan McQuade - Guitar
+            </p>
+            </p>
         </div>
 
         <div class="press-photos press-width">
             <div class="press-photos-header">
-                <h2>Images</h2>
-            <p>(Click for full resolution / more)</p>
+                <h2 class="font-bodega-black">Images</h2>
+            <p class="font-gimlet-reg">(Click for full resolution / more)</p>
             </div>
             <li class="press-photo-list">
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/hero-photo.webp"></a>
@@ -97,7 +105,7 @@
         </div>
 
         <div class="press-music press-width">
-            <h2>Music</h2>
+            <h2 class="font-bodega-black">Music</h2>
             <div class="press-music-icons">
                 <a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png"></a>
                 <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a>
@@ -108,7 +116,7 @@
         </div>
 
         <div class="press-videos press-width">
-            <h2>Videos</h2>
+            <h2 class="font-bodega-black">Videos</h2>
             <div class="all-press-videos">
                 <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/pvM5OBe7rh4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
